Rollback-FeedbackCRM-forbranching

--- a/referrer-portal/src/main/resources/templates/support.html
+++ b/referrer-portal/src/main/resources/templates/support.html
@@ -129,7 +129,7 @@
 							<p>
 								To use InteleViewer with I-MED Online 2.0, you may need to
 								accept Intelerad's Terms and Conditions. Please click <a
-									href="https://i-med.com.au/wps/wcm/connect/doctor/9a8db5a9-1414-447f-8443-a519dc122703/InteleViewer+Support+29.05.18.pdf?MOD=AJPERES&amp;CVID=meFVu-Z&amp;CVID=meFVu-Z&amp;CVID=meFVu-Z&amp;CVID=meFVu-Z&amp;CVID=meFTV03">here</a>
+									href="/wps/wcm/connect/doctor/9a8db5a9-1414-447f-8443-a519dc122703/InteleViewer+Support+29.05.18.pdf?MOD=AJPERES&amp;CVID=meFVu-Z&amp;CVID=meFVu-Z&amp;CVID=meFVu-Z&amp;CVID=meFVu-Z&amp;CVID=meFTV03">here</a>
 								for step-by-step instructions.
 							</p>
 						</div>
