--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/results}">
-							<img src="images/public/Image-card-network_new.jpg">
+							<div class="image-index"></div>
 							<div class="link-index">Results - access patient images and reports</div>
 							<p>I-MED Online 2.0 gives practitioners access to diagnostic images and reports via desktop and mobile. We are progressively rolling out I-MED Online 2.0 across the country.</p>
 						</a>
@@ -36,7 +36,7 @@
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/electronicreferral}">
-							<img src="images/public/ereferral.jpg">
+							<div class="image-index resources"></div>
 							<div class="link-index">E-referrals now available</div>
 							<p>Practitioners can now use our E-referral for imaging requests at I-MED Radiology. It's the best way to ensure your patients get the diagnostic imaging they need.</p>
 						</a>
@@ -48,7 +48,7 @@
 							onclick="window.open('https://i-med.com.au/doctors/telehealth');"
 							href="javascript:void(0);"
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
-							<img src="images/public/telehealth.jpg">
+							<div class="image-index referrer"></div>
 							<div class="link-index">Telehealth/PMS referral templates</div>
 							<p>You can download an I-MED referral template into your practice management software (PMS). Please visit our Telehealth page for more information on this.</p>
 						</a>
@@ -57,7 +57,8 @@
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
 							
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/support}">
-							<img src="images/public/serviceman.jpg">
+							<div class="image-index support notice"
+								style="background-size: 568px;"></div>
 							<div class="link-index">Support</div>
 							<p>Should you need support with the new E-Referral, with I-MED Online 2.0 or any other issue, help is at hand. Our support team is here to assist by phone, chat or email.</p>
 						</a>
