Feedback text changes

--- a/referrer-portal/src/main/resources/templates/installsupport.html
+++ b/referrer-portal/src/main/resources/templates/installsupport.html
@@ -8,7 +8,10 @@
 	
 	<div class="colour-light-grey section">
     <div class="wrapper">
-      <h1>Arrange for installation support</h1>
+      <h1>Arrange for e-Referral installation support</h1>
+      <p class="intro-text">
+      Please complete the fields below and submit. We’ll be in touch to arrange an appointment.
+      </p>
       
 			<div class="row w-row">
 				<div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre">	
