--- a/referrer-portal/src/main/resources/templates/installsupport.html
+++ b/referrer-portal/src/main/resources/templates/installsupport.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <h1>Arrange for e-Referral installation support</h1>
       <p class="intro-text">
-      Please complete the fields below and submit. We’ll be in touch to arrange an appointment.
+      Please complete the fields below and submit. We'll be in touch to arrange an appointment.
       </p>
       
 			<div class="row w-row">
