EV Live with login page image

--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 		<h1>Sign in to I-MED Online 2.0</h1>
 		<div class="half-rule"></div>
    		<div class="wrapper">
-   			<div class="image-procedures section"></div>
+   			<img src="images/public/evinimol2.jpg">
 		    <br>
 		    <div th:if="${message}" class="red-alert-bar" th:text="${message}"></div>
 		    <div class="row w-row">
