login and installs base work.

--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -40,6 +40,16 @@
 	             <a th:href="@{/apply}" class="link-info link-underline">Don't have an account? Create one here.</a>
 	           </div>
 	         </div>
+	         
+	         <!-- Intelerad -->
+	         <div class="row w-row" style="margin-top:35px;">
+	           <div class="col-no-padding-top w-col w-col-12 w-col-stack">
+	             <a href="https://pacs.i-med.com.au/Portal/app#/" class="link-info link-underline">Access InteleConnect EV</a>
+	             <img src="images/public/pacslarge.jpg">
+	             <a th:href="@{/installers}" class="link-info button-primary w-button full-width">Installers for downloading InteleViewer for Mac and Windows</a>
+	           </div>
+	         </div>
+	         
 	         </div>
 	         </div>
 	    </div>
