--- a/referrer-portal/src/main/resources/templates/installers.html
+++ b/referrer-portal/src/main/resources/templates/installers.html
@@ -75,7 +75,7 @@
 																	<img th:src="@{images/public/personlaptop.jpg}">
 																</div>
 																<div class="hr wrapper-profile">
-																	<h3>Installers for downloading InteleViewer</h3>
+																	<h3 class="link-info" style="color: #004f9a;">Installers for downloading InteleViewer</h3>
 																	<a href="https://connections.i-medonline.com.au/images/imo/InteleViewer_App_Userguide.pdf" target="_blank" class="link-info link-underline">InteleViewer App User Guide (PDF)</a>
 																	<a href="https://connections.i-medonline.com.au/images/imo/IMED Online install guide.pdf" target="_blank" class="link-info link-underline">Windows Installation Guide</a>
 																	<a href="https://connections.i-medonline.com.au/images/imo/InteleViewer 64-Bit.zip" target="_blank" class="link-info link-underline">Windows 64-bit Bundle</a>
