New window on ev url

--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -46,7 +46,7 @@
                 	<h1>Access InteleConnect EV</h1>
         					<div class="half-rule"></div>
                   <div class="col-no-padding-top w-col w-col-12 w-col-stack">
-                      <a href="https://pacs.i-med.com.au/Portal/app#/">
+                      <a href="https://pacs.i-med.com.au/Portal/app#/"  target="_blank">
                       	<img src="images/public/pacslarge.jpg" />
                       </a>
                       <a th:href="@{/installers}" class="link-info button-primary w-button full-width">Installers for downloading InteleViewer for Mac and Windows</a>
