Feedback round2 test

--- a/referrer-portal/src/main/resources/templates/installers.html
+++ b/referrer-portal/src/main/resources/templates/installers.html
@@ -76,11 +76,9 @@
 																</div>
 																<div class="hr wrapper-profile">
 																	<h3 class="link-info" style="color: #004f9a;">Installers for downloading InteleViewer</h3>
-																	<a href="https://connections.i-medonline.com.au/images/imo/InteleViewer_App_Userguide.pdf" target="_blank" class="link-info link-underline">InteleViewer App User Guide (PDF)</a>
+																	<a href="https://connections.i-medonline.com.au/images/imo/InteleViewer_App_Userguide.pdf" target="_blank" class="link-info link-underline">InteleViewer User Guide (PDF)</a>
 																	<a href="https://connections.i-medonline.com.au/images/imo/IMED Online install guide.pdf" target="_blank" class="link-info link-underline">Windows Installation Guide</a>
 																	<a href="https://connections.i-medonline.com.au/images/imo/InteleViewer 64-Bit.zip" target="_blank" class="link-info link-underline">Windows 64-bit Bundle</a>
-																	<a href="https://connections.i-medonline.com.au/images/imo/MAC_Download_Instructions.pdf" target="_blank" class="link-info link-underline">Mac Download Instructions (PDF)</a>
-																	<a href="https://connections.i-medonline.com.au/images/imo/RIL+I-MED+Online+Mac+instructions+combined.pdf" target="_blank" class="link-info link-underline">MAC Instructions (PDF)</a>
 																	<a href="https://pacs.ril.com.au/InteleViewer-tracks/enterprise/macosx/InteleViewer.dmg" target="_blank" class="link-info link-underline">MAC Installer (ZIP 31MB)</a>
 																	<div class="text-tag">
 																	</div>
