home tile update after new imed website

--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -35,8 +35,7 @@
 					</div>
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"	
-							onclick="window.open('https://i-med.com.au/doctors/e-referral/image-request');"
-							href="javascript:void(0);"						
+							th:href="@{/login}"			
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<img src="images/public/ereferral.jpg">
 							<div class="link-index">Request imaging via our online e-Referral</div>
@@ -47,7 +46,7 @@
 				<div class="row w-row">
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
-							onclick="window.open('https://i-med.com.au/doctors/e-referral/best-practice');"
+							onclick="window.open('https://www.i-med.com.au/resources/e-referrals');"
 							href="javascript:void(0);"
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<img src="images/public/telehealth.jpg">
