ready for review by mkt

--- a/referrer-portal/src/main/resources/templates/about.html
+++ b/referrer-portal/src/main/resources/templates/about.html
@@ -85,7 +85,7 @@
 										<div class="analytics.overlay"></div>
 									</div>
 
-									<h1>The new I-MED Online 2.0</h1>
+									<h1>I-MED Online 2.0</h1>
 									<div class="half-rule"></div>
 									<img
 										src="images/public/resource_banner.jpg"
@@ -93,22 +93,13 @@
 									<div style="padding-top: 10px; background-color: #fff"
 										class="w-section">
 										<div class="wrapper">
-											<div class="intro-text">I-MED Online 2.0 is a new,
-												improved patient image and reporting platform that makes it
-												easier and faster to access the information you need. It
-												means you can access patient images and reports where and
-												when you need to, on tablet, mobile or desktop.</div>
+											<div class="intro-text">I-MED Online 2.0 is a new, improved patient image and reporting platform that makes it easier and faster to access the information you need, without having to download software or change viewing modes.</div>
 
 											<div class="row w-row">
 												<div class="w-col w-col-8">
-													<h3>I-MED Online 2.0 for web and mobile:</h3>
+													<h3>I-MED Online 2.0:</h3>
 
 													<ul class="list-unordered">
-														<li class="list-item"><strong>I-MED Online
-																2.0 for web and mobile</strong>
-															<p>New I-MED Online 2.0 has an integrated App, so you
-																can access patient images and reports anywhere, any
-																time.</p></li>
 														<li class="list-item"><strong>Image and
 																report viewing on one page</strong>
 															<p>The desktop version allows you to view images and
@@ -187,85 +178,6 @@
 	text-align: center;
 }
 </style>
-										<div class="colour-light-grey section w-section">
-											<div class="wrapper" style="padding-top: 10px;">
-												<h2 style="margin-top: 10px;">The I-MED Online 2.0 App - a whole new way to view!</h2>
-												<div class="profiles row w-row">
-													<div
-														class="col-1-4 w-col w-col-3 w-col-medium-6 w-col-small-6 ng-scope">
-														<div class="hr wrapper-card">
-															<div class="profile-image-wrapper">
-																<div class="profile-container">
-																	<img
-																		src="images/public/phone_filter.jpg">
-																</div>
-																<div class="hr wrapper-profile">
-																	<div class="text-tag">
-																		The App 'Filter' allows you to search by patient, and
-																		sort by alpha, date or time period.<br>&nbsp;<br>
-																	</div>
-																</div>
-															</div>
-														</div>
-
-													</div>
-													<div
-														class="col-1-4 w-col w-col-3 w-col-medium-6 w-col-small-6 ng-scope">
-														<div class="hr wrapper-card">
-															<div class="profile-image-wrapper">
-																<div class="profile-container">
-																	<img
-																		src="images/public/phone_orders.jpg">
-																</div>
-																<div class="hr wrapper-profile">
-																	<div class="text-tag">
-																		Access all patient reports and images linked to you.
-																		Refine your search using the 'Filter' icon.<br>&nbsp;<br>
-																	</div>
-																</div>
-															</div>
-														</div>
-
-													</div>
-
-													<div
-														class="col-1-4 w-col w-col-3 w-col-medium-6 w-col-small-6 ng-scope">
-														<div class="hr wrapper-card">
-															<div class="profile-image-wrapper">
-																<div class="profile-container">
-																	<img
-																		src="images/public/report_detail.jpg">
-																</div>
-																<div class="hr wrapper-profile">
-																	<div class="text-tag">
-																		Use the 'Action' button then the 'Arrow' button to
-																		click through an image series.<br>&nbsp;<br>
-																	</div>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div
-														class="col-1-4 w-col w-col-3 w-col-medium-6 w-col-small-6 ng-scope">
-														<div style="overflow: hidden;" class="hr wrapper-card">
-															<div class="profile-image-wrapper">
-																<div class="profile-container">
-																	<img
-																		src="images/public/report_detail_scroll.jpg"
-																		alt="" title="">
-																</div>
-																<div class="hr wrapper-profile">
-																	<div class="text-tag">Scroll through images, use
-																		two finger "pinch" to zoom or shrink screen, and two
-																		fingers to drag image around screen.</div>
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<!-- gray bg-->
 
 										<div class="wrapper">
 											<div class="row w-row">
@@ -281,7 +193,7 @@
 																create a new one? </a>
 															<div class="accordion-answer hide">
 																<p>Yes you do. The new I-MED Online 2.0 is a
-																	completely new platform with an integrated App. This
+																	completely new platform. This
 																	requires all our users to create a new account. (You
 																	can re-use your current user name and password if you
 																	want to.)</p>
@@ -317,19 +229,6 @@
 																	via InteleViewer. We would recommend that
 																	practitioners' use the same user name for I-MED Online
 																	2.0 as they do for InteleViewer.</p>
-															</div>
-														</div>
-														<div class="accordion">
-															<img class="image-accordion"
-																src="images/public/icon-open.svg"
-																width="30"> <a class="link-accordion"
-																href="javascript:void()"> Can I use the App without
-																creating a new account? </a>
-															<div class="accordion-answer hide">
-																<p>You can download the App at any time, but it
-																	won't let you log on until you have created an I-MED
-																	Online 2.0 account. This is because we must verify each
-																	user's credentials before they can use the App.</p>
 															</div>
 														</div>
 														<div class="accordion">
@@ -380,17 +279,6 @@
 															<img class="image-accordion"
 																src="images/public/icon-open.svg"
 																width="30"> <a class="link-accordion"
-																href="javascript:void()"> Will the App work on
-																Android devices? </a>
-															<div class="accordion-answer hide">
-																<p>Yes, the new App is designed for both iOS and
-																	Android.</p>
-															</div>
-														</div>
-														<div class="accordion">
-															<img class="image-accordion"
-																src="images/public/icon-open.svg"
-																width="30"> <a class="link-accordion"
 																href="javascript:void()"> Which browser should I
 																use? </a>
 															<div class="accordion-answer hide">
@@ -430,19 +318,6 @@
 													<div class="button-primary-text">CREATE ACCOUNT</div>
 												</a>
 											</div>
-										</div>
-
-										<div class="on-center">
-											<h3>Created an account?* Now get the App!</h3>
-											<p class="on-center">(*Remember, to use the App you will
-												need to have received your verified user name.)</p>
-											<a href="javascript:void(0)"
-												onclick="window.open('https://itunes.apple.com/us/app/i-med-online/id1323846438?ls=1&amp;mt=8');"><img
-												src="images/public/download_app_store.png"
-												style="width: 200px;"></a> <a href="javascript:void(0)"
-												onclick="window.open('http://play.google.com/store/apps/details?id=au.com.imed.app');"><img
-												src="images/public/download_google_play.png"
-												style="width: 200px;"></a>
 										</div>
 
 									</div>
