--- a/referrer-portal/src/main/resources/templates/support.html
+++ b/referrer-portal/src/main/resources/templates/support.html
@@ -24,11 +24,7 @@
 			<div class="wrapper">
 
 				<div style="background-color: #fff; margin-top: 20px;"
-					class="intro-text">I-MED Online 2.0 is designed to give
-					referring practitioners quick and easy access to patient reports
-					and images on tablet, phone or desktop. However, if you should have
-					any issues either downloading or accessing your I-MED Online 2.0,
-					we have plenty of support at hand.</div>
+					class="intro-text">I-MED Online 2.0 is designed to give referring practitioners quick and easy access to patient reports. However, if you should have any issues accessing your I-MED Online 2.0, we have plenty of support at hand.</div>
 				<h3>Support for I-MED Online 2.0 users:</h3>
 				<style>
 .support-ui {
@@ -63,12 +59,7 @@
 							href="javascript:void()"> Once I've created my account, how
 							do I access I-MED Online 2.0? </a>
 						<div class="accordion-answer hide">
-							<p>Once you've submitted your new account request, we'll send
-								you your verified user name, usually the same day or the next
-								business day. You can then access I-MED Online 2.0 from your
-								computer (desktop or laptop) or any device that can be connected
-								to the internet via the App. If you save the address to your
-								favourites/bookmarks you can be logged on in seconds.</p>
+							<p>Once you've submitted your new account request, we'll send you your verified user name, usually the same day or the next business day. You can then access I-MED Online 2.0 from your computer (desktop or laptop). If you save the address to your favourites/bookmarks you can be logged on in seconds.</p>
 						</div>
 					</div>
 					<div class="accordion">
@@ -149,16 +140,6 @@
 						</div>
 					</div>
 				</div>
-				<h3>Created an account?* Now get the App!</h3>
-				<p>(*Remember, to use the App you will need to have received
-					your verified user name.)</p>
-				<a href="javascript:void(0)"
-					onclick="window.open('https://itunes.apple.com/us/app/i-med-online/id1323846438?ls=1&amp;mt=8');"><img
-					src="images/public/download_app_store.png"
-					style="width: 200px;"></a> <a href="javascript:void(0)"
-					onclick="window.open('http://play.google.com/store/apps/details?id=au.com.imed.app');"><img
-					src="images/public/download_google_play.png"
-					style="width: 200px;"></a>
 			</div>
 		</div>
 		<script>
