--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -20,17 +20,14 @@
 			<div class="wrapper">
 				<h1>I-MED Online 2.0 for medical practitioners</h1>
 				<div class="half-rule"></div>
-				<div class="intro-text">Welcome to I-MED Online 2.0, where
-					practitioners can quickly and easily access patient images and
-					reports, on desktop, tablet or mobile. From this page practitioners
-					can also order referral pads and ask for technical support.</div>
+				<div class="intro-text">Welcome to I-MED Online 2.0, where practitioners can quickly and easily access patient reports and images. From this page practitioners can also contact us for technical support or set up e-Referrals.</div>
 				<div class="row w-row">
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/results}">
 							<img src="images/public/Image-card-network_new.jpg">
 							<div class="link-index">Results - access patient images and reports</div>
-							<p>I-MED Online 2.0 gives practitioners access to diagnostic images and reports via desktop and mobile. We are progressively rolling out I-MED Online 2.0 across the country.</p>
+							<p>I-MED Online 2.0 gives practitioners access to diagnostic images and reports. We are progressively rolling out I-MED Online 2.0 across the country.</p>
 						</a>
 					</div>
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
@@ -51,7 +48,7 @@
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<img src="images/public/telehealth.jpg">
 							<div class="link-index">e-Referrals for better patient outcomes</div>
-							<p>Send us your imaging requests electronically and securely, via HealthLink, from within your Best Practice software. We'll contact your patient to make an appointment.</p>
+							<p>Send us your imaging requests electronically and securely from within your Best Practice software. We'll contact your patient to make an appointment.</p>
 						</a>
 					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
