align box with space

--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<img src="images/public/ereferral.jpg">
 							<div class="link-index">Request imaging via our online e-Referral</div>
-							<p>Our easy-to-use online imaging request is available to our I-MED Online 2.0 users. It is simple to use, compatible with desktop, mobile and tablet.</p>
+							<p>Our easy-to-use online imaging request is available to our I-MED Online 2.0 users. It is simple to use, compatible with desktop, mobile and tablet.<br/>&nbsp;</p>
 						</a>
 					</div>
 				</div>
@@ -48,7 +48,7 @@
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<img src="images/public/telehealth.jpg">
 							<div class="link-index">e-Referrals for better patient outcomes</div>
-							<p>Send us your imaging requests electronically and securely from within your Best Practice software. We'll contact your patient to make an appointment.</p>
+							<p>Send us your imaging requests electronically and securely from within your Best Practice software. We'll contact your patient to make an appointment.<br/>&nbsp;</p>
 						</a>
 					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
