--- a/referrer-portal/src/main/resources/templates/retrieve.html
+++ b/referrer-portal/src/main/resources/templates/retrieve.html
@@ -32,7 +32,7 @@
 	    <h1>Retrieve Your User ID</h1>
 			<div class="half-rule"></div>
 			<div class="image-procedures section"></div>	
-			<p class="intro-text">Enter your registered AHPRA number and email address to retrieve your user ID.</p>    
+			<p class="intro-text">Enter your registered email address and AHPRA number to retrieve your user ID.</p>    
 		
 			<div class="row w-row">
 		  	<div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre">
