--- a/referrer-portal/src/main/resources/templates/termsofuse.html
+++ b/referrer-portal/src/main/resources/templates/termsofuse.html
@@ -2,160 +2,70 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:include="fragments/layout/head :: head">
-<title id="pageTitle">About</title>
+<title id="pageTitle">Terms of use</title>
 </head>
 </head>
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
 
-	<div class="wpthemeControlBody wpthemeOverflowAuto wpthemeClear top-bottom-space">
-		<!-- lm:control dynamic spot injects markup of layout control -->
-		<!-- asa.overlay marks the node that the AsaOverlayWidget will be placed in -->
-		<div style="position: relative; z-index: 1;">
-			<div class="analytics.overlay"></div>
-		</div>
-		<div class="section wrapper">
-			<h1>Terms of Use</h1>
-			<div class="half-rule"></div>
-			<div class="row w-row">
-				<!-- help-section class added for custom heading style -->
-				<!-- <div class="w-col w-col-6 col-centre help-section"> -->
-				<p class="Normal" style="margin-top: 0pt; line-height: 5pt;">
-					<a name="graphic04"> </a> <a name="_GoBack"> </a> <span
-						class="Normal__Char"
-						style="font-family: 'Arial', 'Arial'; font-size: 11pt; line-height: 11pt;">
-						<img src="" alt="" width="60%" height="auto" border=""
-						style="display: block; margin-left: auto; margin-right: auto;"
-						title="">
-					</span>
-				</p>
-				<p class="Normal">
-					<a name="graphic05"> </a> <span class="Normal__Char"
-						style="font-family: 'Arial', 'Arial';"> <img src="" alt=""
-						width="300" height="auto" border=""
-						style="display: block; margin-left: auto; margin-right: auto;"
-						title="">
-					</span>
-				</p>
-				<p class="Normal">&nbsp;</p>
-				<p class="Normal" style="margin-top: 0pt;">&nbsp;</p>
-				<p class="Normal" style="line-height: 10pt;">
-					<span class="Normal__Char"
-						style="font-family: 'Arial', 'Arial'; font-size: 11pt; line-height: 11pt; color: #1F497D;">I am a registered health practitioner.</span>
-				</p>
-				<p class="Normal">&nbsp;</p>
-				<p class="Normal" style="line-height: 10pt;">
-					<span class="Normal__Char"
-						style="font-family: 'Arial', 'Arial'; font-size: 11pt; line-height: 11pt; color: #1F497D;">By
-						applying to access I-MED Online I acknowledge and agree to the
-						following terms and conditions of access and use: </span>
-				</p>
-				<p class="Normal">&nbsp;</p>
-				<ul class="tnc">
-					<li><span>I will access a patient's records through
-							I-MED Online for the sole purpose of providing health services to
-							that patient ( <b>Purpose</b> ).
-					</span></li>
-					<li><span>I must not browse through or search any
-							person's records or access records of any person who is not a
-							patient to whom I am providing health services.</span></li>
-					<li><span>Any images or other information copied or
-							printed from I-MED Online, are health information and must only
-							be copied or printed for the Purpose and will form part of the
-							patient's confidential medical record.</span></li>
-					<li><span>I will securely store my user name and
-							password and keep it confidential at all times, including by not
-							allowing any other person to know or access my user name and
-							password. I will change my password regularly.</span></li>
-					<li><span> I will take all reasonable steps to maintain
-							the security and integrity of my information systems, recognising
-							the importance of maintaining security relating to the I-MED
-							Online database and ensuring that no other person can obtain
-							access to I-MED Online.</span></li>
-					<li><span>If I become aware of any actual or threatened
-							breach of security relating to I-MED Online (including the loss
-							or theft of my username and password), I will immediately notify
-							I-MED Radiology Network Limited (ACN 093 625 346) ( <b>I-MED</b>
-							) and I will take all steps reasonably required to assist I-MED
-							to manage or mitigate any risks, including to patients, and to
-							investigate or assist I-MED to investigate the threatened or
-							actual breach.
-					</span></li>
-					<li><span>I will co-operate with any audit by I-MED or
-							its agents of my access to the System.</span></li>
-					<li><span>I have read and understood and agree to
-							comply with, at all times, these Terms of Acceptance and <a
-							href="https://www.i-med.com.au/wps/wcm/connect/i-med/76aabf02-e1e4-4638-bdde-d987470713b5/FINAL-Privacy-Statement.pdf?MOD=AJPERES&amp;CVID=lCbqiOV&amp;CVID=lCbqiOV&amp;CVID=lCbqiOV&amp;CVID=lypRjfN&amp;CVID=lypRjfN">I-MED's
-								Privacy Statement</a> .
-					</span></li>
-					<li><span>I will comply with all privacy obligations
-							under the <i>Privacy Act 1988</i> (Cth) and all other relevant
-							privacy laws and codes, including professional codes relating to
-							patients' privacy and confidentiality ( <b>Privacy Laws</b> ), in
-							accessing, using, disclosing and storing information made
-							available to me via I-MED Online.
-					</span></li>
-					<li><span>I will not submit, post, upload, email or
-							otherwise send or transmit to I-MED Online anything that contains
-							software viruses or any other computer code, files or programs
-							designed to interrupt, harm, damage, destroy or limit the
-							functionality of any computer software or hardware or equipment
-							linked to I-MED Online.</span></li>
-					<li><span>I will not interfere with I-MED Online or the
-							servers or networks underlying or connected to I-MED Online.</span></li>
-					<li><span>I-MED may revoke my access to I-MED Online at
-							any time in the event of any breach, suspected or likely breach
-							of these Terms of Acceptance or other terms and conditions
-							notified to me from time to time.</span></li>
-					<li><span>I am solely responsible for all costs
-							associated with my use of I-MED Online including data costs
-							charged to me by my Internet Service Provider as a result of
-							using I-MED Online.</span></li>
-				</ul>
-
-
-				<p class="Normal" style="margin-top: 1pt;">&nbsp;</p>
-				<p class="Normal" style="margin-left: 30%;">
-					<a name="graphic06"> </a> <img src="" alt="" width="200"
-						height="auto" border="" title="">
-				</p>
-				<p class="Normal"
-					style="margin-top: 4pt; margin-right: 5pt; text-align: right;">
-					<span class="Normal__Char"
-						style="font-family: 'Arial', 'Arial'; color: #1F497D;">September
-						2017 </span>
-				</p>
-				<!-- </div> -->
-			</div>
-		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<div class="wpthemeClear"></div>
-	</div>
-	</section>
-	</div>
-	</div>
-	</div>
-	<div class="wpthemeClear"></div>
+	<div class="section wrapper">
+		<h1>I-MED ONLINE USER ACCESS AGREEMENT</h1>
+		<div class="half-rule"></div>
+		
+<p>&nbsp;</p>
+<p>In this User Access Agreement (&ldquo;Agreement&rdquo;), the terms "we", "us" and "our" means I-MED Radiology Network Limited (ACN 093 625 346) and each of our associated entities, and "you" and &ldquo;your&rdquo; means the individual or user agreeing to this Agreement.</p>
+<p>Background</p>
+<p>A. Privacy law requires us to take reasonable steps to ensure that any personal information (including health and sensitive information) that we hold is protected from misuse, interference and loss, from unauthorised access, modification or disclosure, and is restricted to authorised persons for the provision of health services only (being the purpose for which it was collected).</p>
+<p>&nbsp;</p>
+<p>B. We also need to ensure our electronic and information systems, including our RIS and PACS, servers, equipment, software and networks (whether accessed via I-MED Online, I-MED Online 2.0, WebComrad, InteleConnect, InteleBrowser or otherwise) (collectively, "I-MED Online") are protected from viruses, other malware and unauthorised access &ndash; and are used for their proper purpose.</p>
+<p>&nbsp;</p>
+<p>C. We therefore require every individual and ED User (as those terms are defined below) who wish to use I-MED Online to agree to this Agreement, comply with the restrictions contained in it and to act in a way that maintains the privacy of our patients, referrers and staff and the security of I-MED Online.</p>
+<p>&nbsp;</p>
+<h2>Agreement</h2>
+<p>1. By registering for and continuing to use an I-MED Online account, you agree to comply with the terms set out in this Agreement, and agree to comply with our Website Terms of Use that are found on our website www.i-med.com.au, as updated from time to time.</p>
+<p>2. This Agreement contains important information, including disclaimers and limitations of liability that apply to your access to I-MED Online</p>
+<p>3. This Agreement:</p>
+<p>a) becomes binding on you on your acceptance of it when registering for your I-MED Online account; and</p>
+<p>b) governs your ongoing access to and use of I-MED Online at all times.</p>
+<p>&nbsp;</p>
+<p>4. All of the terms of, and obligations under, this Agreement apply to you as an individual.</p>
+<p>&nbsp;</p>
+<p>5. To be eligible to register for and continue to hold an I-MED Online account, you represent and warrant that you are at time of registration, and will continue to be at all relevant times, a registered health practitioner.</p>
+<p>&nbsp;</p>
+<p>6. In consideration of, amongst other things, our providing you with access to I-MED Online, you acknowledge and agree as follows:</p>
+<p>a) (purpose) to access, copy, print and/or hold a patient's medical imaging records or other personal information available on or from I-MED Online, for the sole purpose of providing diagnostic or treatment services to that patient at that time and to not browse through or access, print, copy or hold any person&rsquo;s records for any other purpose;</p>
+<p>b) (privacy) that you will respect patients' privacy and protect the confidentiality of all images and information (as health information) which you access I-MED Online and will comply with all privacy obligations under the Privacy Act 1988 (Cth) and all other relevant privacy laws and codes, including professional codes relating to patients&rsquo; privacy and confidentiality (&ldquo;Privacy Laws&rdquo;) in accessing, using, disclosing, printing or copying and/or holding information made available to you via I-MED Online, which information will form part of your patients&rsquo; confidential health records that you hold and you must protect them accordingly;</p>
+<p>c) that you have read, agree to and will comply with this Agreement and our Privacy Statement (&ldquo;Your Privacy&rdquo;) and you will comply with any other policies related to the security or privacy of electronic records that we notify you of from time to time;</p>
+<p>d) (access details) to keep your username and password securely stored and absolutely confidential at all times and, except as specifically permitted in clause 7 below, take steps to ensure that no other person is able to ascertain your user name and password (including not providing them to any other person or leaving them in a place that can be accessed by other persons) and to change your password regularly;</p>
+<p>e) (details up-to-date) to promptly notify us if any of your personal information held by us in connection with your access to I-MED Online changes or is inaccurate or incomplete;</p>
+<p>f) (username and passwords) to immediately notify us if your username/s and/or password/s have been lost, misplaced or stolen;</p>
+<p>g) (security) to take all reasonable steps to maintain the security and integrity of I-MED Online and the information systems, including by installing and maintaining on your information systems appropriate firewalls and malware prevention and detection program and ensuring that no unauthorised person can use your information systems to obtain access to I-MED Online and/or any patient personal information or confidential information you obtained via I-MED Online;</p>
+<p>h) (appropriate use) to not submit, post, upload, email or otherwise send or transmit to I-MED Online anything that contains software viruses or any other computer code, files or programs designed to interrupt, harm, damage, destroy or limit the functionality of any part of I-MED Online or, otherwise, to not interfere with any part of I-MED Online;</p>
+<p>i) (data breaches) to notify us immediately if you become aware of any actual or threatened breach of security or a data breach relating to I-MED Online or any personal information on or obtained via I-MED Online and to take all steps we reasonably require to assist us to manage or mitigate any risks, including to patients, and to investigate and/or report, as required, any threatened or actual security or data breach; and</p>
+<p>j) (monitoring and compliance) to us conducting regular audits of your access to and use of I-MED Online for the purpose of monitoring compliance with this Agreement and to co-operate with any such audit undertaken by us or our agents.</p>
+<p>&nbsp;</p>
+<h2>Emergency and hospital department accounts</h2>
+<p>&nbsp;</p>
+<p>7. If you are registering an account as an emergency department (or other hospital department or similar approved in writing by us) then, notwithstanding any other terms of this Agreement:</p>
+<p>a) you may have and use a shared username and password for use by emergency department staff whom are registered health practitioners who you have authorised to do so (&ldquo;ED Users&rdquo;);</p>
+<p>b) you must not provide the username and password to any person other than ED Users;</p>
+<p>c) you must keep the emergency department username and password securely stored; and</p>
+<p>d) you must procure that each of your ED Users accept and agree to this Agreement as they apply to them (see clause 8 below) before they access I-MED Online for the first time and you must ensure that they comply with it,</p>
+<p>but, otherwise, the terms of and obligations under this Agreement apply to you.</p>
+<p>&nbsp;</p>
+<p>8. If you are an ED User, you agree to and will comply with all provisions in clause 6 and you must immediately cease using the username and password to access I-MED Online once you leave the employ of or cease acting on behalf of the entity under which authority you were provided such username and/or password.</p>
+<p>&nbsp;</p>
+<p>9. You indemnify and hold us harmless in relation to all losses, damages, actions, claims, costs or expenses which may be brought against, suffered or incurred by us as a direct or indirect result of your (or ED Users, as applicable) failing to comply with any relevant the terms and conditions of this Agreement including, without limitation, your failure to implement appropriate safeguards to maintain the security and integrity of I-MED Online and your (or your ED User&rsquo;s) failure to comply with any Privacy Laws.</p>
+<p>&nbsp;</p>
+<p>10. We may revoke your access to I-MED Online in our absolute discretion in the event of any breach, suspected or likely breach by you (or ED Users, as applicable) of this Agreement.</p>
+<p>&nbsp;</p>
+<p>11. You agree that you are solely responsible for all costs associated with your use of I-MED Online including, without limitation, all telecommunication costs, data usage and systems to view information provided by I-MED Online.</p>
+<p>&nbsp;</p>
+<p>12. We may revise this Agreement and the incorporated policies listed above from time to time and in such case, the revised version will be effective on and from the date we specify. In such case we will notify you in advance by posting a notice on our website and you agree to receive notices electronically in this manner.</p>
+<p>&nbsp;</p>
+<p>13. By continuing to use I-MED Online after any changes to this Agreement become effective, you agree to comply with those changes. If you do not agree with the changes, or any provisions of this Agreement after you have signed up for an I-MED Online account, you may deactivate your account by contacting us.</p>
+<p>&nbsp;</p>
+<p>14. You may also deactivate your account for any reason by contacting us</p>
 	</div>
 
 	<div th:replace="fragments/layout/footer :: footer">...</div>
