--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -12,20 +12,23 @@
 		    <div th:if="${message}" class="red-alert-bar" th:text="${message}"></div>
 		    <div class="row w-row">
 		       <div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre"> 
-				<form name="f" th:action="@{/login}" method="post">  
-	            <div th:if="${param.error}" class="alert alert-danger ng-binding ng-hide" role="alert">    
-	                Invalid user name or password.
-	            </div>
-	            <div th:if="${param.logout}" class="alert alert-info ng-binding ng-hide" role="alert"> 
-	                You have been logged out.
-	            </div>
-	            <input class="field-text w-input" placeholder="User ID" type="text" onChange="document.getElementById('username').value=this.value.replace('@','-!-');"/>
-	            <input type="hidden" id="username" name="username"/>        
-	            <input class="field-text w-input" placeholder="Password" type="password" id="password" name="password"/>    
-	            <div class="form-actions">
-	                <button type="submit" class="link-info button-primary w-button full-width">Sign in</button>
-	            </div>
-		    </form>
+				    <div class="alert alert-info">
+				    	We've updated our terms of use of I-MED Online 2.0 Please carefully review and familiarise yourself with the new <a th:href="@{/termsofuse}">User Access Agreement</a> prior to logging in.
+				    </div>		       
+						<form name="f" th:action="@{/login}" method="post">  
+			            <div th:if="${param.error}" class="alert alert-danger ng-binding ng-hide" role="alert">    
+			                Invalid user name or password.
+			            </div>
+			            <div th:if="${param.logout}" class="alert alert-info ng-binding ng-hide" role="alert"> 
+			                You have been logged out.
+			            </div>
+			            <input class="field-text w-input" placeholder="User ID" type="text" onChange="document.getElementById('username').value=this.value.replace('@','-!-');"/>
+			            <input type="hidden" id="username" name="username"/>        
+			            <input class="field-text w-input" placeholder="Password" type="password" id="password" name="password"/>    
+			            <div class="form-actions">
+			                <button type="submit" class="link-info button-primary w-button full-width">Sign in</button>
+			            </div>
+				    </form>
 		    
 	         <div class="row w-row">
 	           <div class="col-no-padding-top w-col w-col-12 w-col-stack">
