--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 		    <div class="row w-row">
 		       <div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre"> 
 				    <div class="alert alert-info">
-				    	We've updated our terms of use of I-MED Online 2.0 Please carefully review and familiarise yourself with the new <a th:href="@{/termsofuse}">User Access Agreement</a> prior to logging in.
+				    	We've updated our terms of use of I-MED Online 2.0 Please carefully review and familiarise yourself with the new <a th:href="@{/termsofuse}" class="link-underline">User Access Agreement</a> prior to logging in.
 				    </div>		       
 						<form name="f" th:action="@{/login}" method="post">  
 			            <div th:if="${param.error}" class="alert alert-danger ng-binding ng-hide" role="alert">    
