--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 		    <div th:if="${message}" class="red-alert-bar" th:text="${message}"></div>
 		    <div class="row w-row">
 		       <div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre"> 
-				    <div class="alert alert-info">
+				    <div class="orange-alert-bar" style="margin-bottom:10px;">
 				    	We've updated our terms of use of I-MED Online 2.0 Please carefully review and familiarise yourself with the new <a th:href="@{/termsofuse}" class="link-underline">User Access Agreement</a> prior to logging in.
 				    </div>		       
 						<form name="f" th:action="@{/login}" method="post">  
