--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -12,8 +12,10 @@
 		    <div th:if="${message}" class="red-alert-bar" th:text="${message}"></div>
 		    <div class="row w-row">
 		       <div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre"> 
-				    <div class="orange-alert-bar" style="margin-bottom:10px;">
-				    	We've updated our terms of use of I-MED Online 2.0 Please carefully review and familiarise yourself with the new <a th:href="@{/termsofuse}" class="link-underline">User Access Agreement</a> prior to logging in.
+				    <div class="orange-alert-bar" style="margin-bottom:10px;color:black;text-decoration:bold;">
+				    	<strong>
+				    		We have updated our terms of use of I-MED Online 2.0 Please carefully review and familiarise yourself with <br/>the new <a th:href="@{/termsofuse}" class="link-underline">User Access Agreement</a> prior to logging in.
+				    	</strong>
 				    </div>		       
 						<form name="f" th:action="@{/login}" method="post">  
 			            <div th:if="${param.error}" class="alert alert-danger ng-binding ng-hide" role="alert">    
