email change to referrer.success@i-med.com.au

--- a/referrer-portal/src/main/resources/templates/support.html
+++ b/referrer-portal/src/main/resources/templates/support.html
@@ -46,7 +46,7 @@
 							(weekday business hours). See button in right hand bottom corner</span>
 					</li>
 					<li class="list-item"><span>Email: <a
-							href="mailto:referrer@i-med.com.au">referrer@i-med.com.au</a>
+							href="mailto:referrer.success@i-med.com.au">referrer.success@i-med.com.au</a>
 							(weekday business hours)
 					</span></li>
 				</ul>
